maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: '(' expected but identifier found.
      if random3()==0 {
         ^RandomMouseMaze:11: error: illegal start of simple expression
    }
    ^